feat(import): accept multiple input files (JFR + JVM log) with shared DuckDB output